[project]
name = "sambanova"
version = "0.1.0"
description = "A Python SDK for the Sambanova cloud API"
readme = "README.md"
authors = [
  { name = "SA", email = "santhoshreddy.vantikommu@Sambanovasystems.com" }
]
license = { text = "MIT" }
dependencies = [
  "requests >=2.31.0",
]

[project.urls]
Homepage = "https://github.com/"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
